unpackaged/objects/Torneio__c.object
<CustomObject>
    <fields>
        <fullName>DataFinal__c</fullName>
        <description>Data da finalização do torneio</description>
        <inlineHelpText>Data de finalização do torneio</inlineHelpText>
        <label>Data Final</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataInicio__c</fullName>
        <description>Data de início do torneio</description>
        <inlineHelpText>Data de início do torneio</inlineHelpText>
        <label>Data Início</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descrição</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <description>Titulo do torneio</description>
        <label>Titulo</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValorAddOn__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Add-On</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorBuyIn__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Buy-In</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorRebuy__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Rebuy</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ValorTaxa__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Taxa</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Torneio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Titulo__c</columns>
        <columns>DataInicio__c</columns>
        <columns>DataFinal__c</columns>
        <columns>ValorAddOn__c</columns>
        <columns>ValorBuyIn__c</columns>
        <columns>ValorRebuy__c</columns>
        <columns>ValorTaxa__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>T{00000}</displayFormat>
        <label>Nome de Torneio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torneios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>